feat: allow modifying releve from scannettes
