# src/main/java/org/superquinquin/releve/UpdateQtyRequest.java
@@ -1,4 +1,0 @@
-package org.superquinquin.releve;
-
-public record UpdateQtyRequest(double qty) {
-}
